Add UML diagram for Qodex Quiz Management System database schema
configure the register page

and data base connexion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,1 @@
-{
-    "sqltools.connections": [
-        {
-            "mysqlOptions": {
-                "authProtocol": "default",
-                "enableSsl": "Disabled"
-            },
-            "ssh": "Disabled",
-            "previewLimit": 50,
-            "server": "localhost",
-            "port": 3306,
-            "driver": "MySQL",
-            "name": "QODEX",
-            "database": "QODEX",
-            "username": "root",
-            "password": ""
-        }
-    ]
-}
+{\n    "plantuml.jar": "plantuml.jar",\n    "plantuml.render": "Local"\n}
